[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realsim-rl-lab"
version = "0.1.0"
description = "Configurable visual simulation environments for reinforcement learning and robotics prototypes."
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.5.0",
  "gymnasium>=0.29.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "streamlit>=1.28.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0"
]

[tool.setuptools.packages.find]
include = ["simulations*", "examples*"]
